[Flow Report] Fix some NPE's